<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nichat</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="tap_to_continue">Tap here to continue!</string>
    <string name="nichat_logo">Nichat Logo</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="title">Hi, %s</string>
    <string name="subtitle">Welcome to Nichat!</string>
    <string name="search">Search</string>
    <string name="search_hint">Search here …</string>
    <string name="users">Users</string>
    <string name="enter_message">Enter message …</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="scroll_up">Scroll Up</string>
    <string name="scroll_down">Scroll Down</string>
    <string name="statistic">Statistic</string>
    <string name="your_age">YOUR AGE</string>
    <string name="date">--/--/----</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="send_this_image">Send this image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
</resources>
