<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stat.StatFragment">

    <ProgressBar
        android:id="@+id/pb_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/profile"
                android:id="@+id/civ_profile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="60dp"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/civ_profile"/>

            <EditText
                android:id="@+id/et_name_profile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/name"
                android:inputType="textPersonName|textMultiLine"
                tools:ignore="Autofill,RtlSymmetry"
                android:paddingStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name_profile" />

            <TextView
                android:id="@+id/tv_status_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name_profile"/>

            <EditText
                android:id="@+id/et_status_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/status"
                android:inputType="textCapSentences|textMultiLine"
                tools:ignore="Autofill,RtlSymmetry"
                android:paddingStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_status_profile"
                app:layout_constraintStart_toStartOf="@id/et_name_profile"
                app:layout_constraintEnd_toEndOf="@id/et_name_profile"/>

            <TextView
                android:id="@+id/tv_dob_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_status_profile"/>

            <ImageButton
                android:id="@+id/ib_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_dob_profile"
                app:layout_constraintStart_toStartOf="@id/tv_dob_profile"
                android:src="@drawable/ic_calendar"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tv_selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ib_calendar"
                app:layout_constraintTop_toTopOf="@id/ib_calendar"
                app:layout_constraintBottom_toBottomOf="@id/ib_calendar"
                android:text="@string/date"
                android:layout_marginStart="20dp"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:visibility="gone"
                android:background="@drawable/rounded_button"
                android:text="@string/save"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/steel_blue"
                app:layout_constraintTop_toBottomOf="@id/ib_calendar"
                app:layout_constraintStart_toStartOf="@id/et_status_profile"
                app:layout_constraintEnd_toEndOf="@id/et_status_profile"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/sign_out"
                android:layout_marginTop="40dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/medium_sea_green"
                android:background="@drawable/rounded_button"
                app:layout_constraintTop_toBottomOf="@id/btn_save"
                app:layout_constraintStart_toStartOf="@id/et_status_profile"
                app:layout_constraintEnd_toEndOf="@id/et_status_profile"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btn_delete_account"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/delete_account"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/pale_red"
                android:background="@drawable/rounded_button"
                app:layout_constraintStart_toStartOf="@id/btn_sign_out"
                app:layout_constraintEnd_toEndOf="@id/btn_sign_out"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_out"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp"
                tools:ignore="UnusedAttribute" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>