<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_other_profile"
    tools:context=".ui.stat.StatFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/profile"
                android:id="@+id/civ_other_profile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="60dp"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_other_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/civ_other_profile"/>

            <TextView
                android:id="@+id/et_name_other_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                tools:text="John Doe"
                android:background="@drawable/rounded_edittext"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name_other_profile"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_status_other_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name_other_profile"/>

            <TextView
                android:id="@+id/et_status_other_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                tools:text="Busy"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_status_other_profile"
                app:layout_constraintStart_toStartOf="@id/et_name_other_profile"
                app:layout_constraintEnd_toEndOf="@id/et_name_other_profile"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_dob_other_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_status_other_profile"/>

            <ImageView
                android:id="@+id/ib_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_dob_other_profile"
                app:layout_constraintStart_toStartOf="@id/tv_dob_other_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_calendar"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ib_calendar"
                app:layout_constraintTop_toTopOf="@id/ib_calendar"
                app:layout_constraintBottom_toBottomOf="@id/ib_calendar"
                android:text="@string/date"
                android:layout_marginStart="20dp"
                android:textSize="16sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>